--- a/index.html
+++ b/index.html
@@ -176,7 +176,9 @@
         <div class="product-card">
           <div class="product-icons">
             <a href="#"><i data-feather="shopping-cart"></i></a>
-            <a href="#"><i data-feather="eye"></i></a>
+            <a href="#" class="item-detail-button"
+              ><i data-feather="eye"></i
+            ></a>
           </div>
           <div class="product-image">
             <img src="img/products/1.jpg" alt="Product 1" />
@@ -191,14 +193,15 @@
               <i data-feather="star" class="star-full"></i>
               <i data-feather="star"></i>
             </div>
+            <div class="product-price">IDR 30K <span>IDR 55K</span></div>
           </div>
-
-          <div class="product-price">IDR 30K <span>IDR 55K</span></div>
         </div>
         <div class="product-card">
           <div class="product-icons">
             <a href="#"><i data-feather="shopping-cart"></i></a>
-            <a href="#"><i data-feather="eye"></i></a>
+            <a href="#" class="item-detail-button"
+              ><i data-feather="eye"></i
+            ></a>
           </div>
           <div class="product-image">
             <img src="img/products/1.jpg" alt="Product 1" />
@@ -213,14 +216,15 @@
               <i data-feather="star"></i>
               <i data-feather="star"></i>
             </div>
+            <div class="product-price">IDR 30K <span>IDR 55K</span></div>
           </div>
-
-          <div class="product-price">IDR 30K <span>IDR 55K</span></div>
         </div>
         <div class="product-card">
           <div class="product-icons">
             <a href="#"><i data-feather="shopping-cart"></i></a>
-            <a href="#"><i data-feather="eye"></i></a>
+            <a href="#" class="item-detail-button"
+              ><i data-feather="eye"></i
+            ></a>
           </div>
           <div class="product-image">
             <img src="img/products/1.jpg" alt="Product 1" />
@@ -235,9 +239,8 @@
               <i data-feather="star"></i>
               <i data-feather="star"></i>
             </div>
+            <div class="product-price">IDR 30K <span>IDR 55K</span></div>
           </div>
-
-          <div class="product-price">IDR 30K <span>IDR 55K</span></div>
         </div>
       </div>
     </section>
@@ -300,6 +303,37 @@
       </div>
     </footer>
     <!-- Footer End-->
+
+    <!-- Modal Box Items Detail Start -->
+    <div class="modal" id="item-detail-modal">
+      <div class="modal-container">
+        <a href="#" class="close-icon"><i data-feather="x"></i></a>
+        <div class="modal-content">
+          <img src="img/products/1.jpg" alt="Product 1" />
+          <div class="product-content">
+            <h3>Product 1</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque
+              quos voluptatum deleniti incidunt atque earum quia officiis,
+              obcaecati fugit pariatur ipsa, praesentium aliquid nobis
+              asperiores?
+            </p>
+            <div class="product-stars">
+              <i data-feather="star" class="star-full"></i>
+              <i data-feather="star" class="star-full"></i>
+              <i data-feather="star" class="star-full"></i>
+              <i data-feather="star" class="star-full"></i>
+              <i data-feather="star"></i>
+            </div>
+            <div class="product-price">IDR 30K <span>IDR 55K</span></div>
+            <a href="#"
+              ><i data-feather="shopping-cart"></i> <span>add to cart</span></a
+            >
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Modal Box Items Detail End -->
 
     <!-- Feather Icons -->
     <script>
