--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
     <!-- Navbar Start -->
     <nav class="navbar">
-      <a href="#" class="navbar-logo">Kenangan <span>senja</span>.</a>
+      <a href="#" class="navbar-logo">kenangan <span>senja</span>.</a>
 
       <div class="navbar-nav">
         <a href="#home">Home</a>
