--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur,
           eligendi!
         </p>
-        <a href="#" class="cta">Beli Sekarang!</a>
+        <!-- <a href="#" class="cta">Beli Sekarang!</a> -->
       </main>
     </section>
     <!-- Hero Section End -->
