menambahkan form checkout

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <h5>Customer Detail</h5>
             <label for="name">
               <span>Name</span>
-              <input type="text" name="name" id="name" />
+              <input type="text" name="name" id="name" autofocus />
             </label>
 
             <label for="email">
@@ -116,7 +116,7 @@
               id="checkout-button"
               value=""
             >
-              Chekcout
+              Chekcout`
             </button>
           </form>
         </div>
