modifikasi index.html

--- a/index.html
+++ b/index.html
@@ -259,7 +259,10 @@
                   stroke-linecap="round"
                   stroke-linejoin="round"
                 >
-                  <use href="img/feather-sprite.svg#eye" /></svg
+                  <use
+                    href="img/feather-sprite.svg#eye"
+                    class="item-detail-button"
+                  /></svg
               ></a>
             </div>
             <div class="product-image">
